# kaguya

./: .gitignore  .gitmodules  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: evaluator.md  gensfen.md  lead.md  trainer.md
.claude/skills/eval/: SKILL.md
.claude/skills/gensfen/: SKILL.md
.claude/skills/train/: SKILL.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
docs/architecture/: bhkp.md  fmhkp.md  hkp.md  kp.md  mhkp.md
docs/plans/: gensfen_parity_with_tanuki.md
docs/train/: evaluation_trained_model.md  qsearch_leaf_policy.md  tuning.md
scripts/: build_yaneuraou.sh  compare_gensfen.py
tests/: conftest.py  test_callbacks.py  test_net_stats.py  test_scripts.py
